src/main/metadata/objects/Factory_Fields__mdt.object
<CustomObject>
    <fields>
        <fullName>Buttons__c</fullName>
        <description>Buttons for AddressSearchValidationcmp used for New Account creation</description>
        <label>Buttons</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Class_Name__c</fullName>
        <description>Class returned by Factory Pattern, used to execute Market specific logic. New markets need to have a Market specific class populated.</description>
        <label>Class Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Component_Name__c</fullName>
        <description>Placeholder for component Name</description>
        <label>Component_Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Data_Table_Actions__c</fullName>
        <description>Row Actions for components involving Lightning:DataTable</description>
        <label>Data Table Actions</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Display_Fields__c</fullName>
        <description>Placeholder for fields to be displayed on the screen for Lightning:DataTable</description>
        <label>Display Fields</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Input_Fields__c</fullName>
        <description>Contains the input fields for a particular Lightning Component based on the Markets</description>
        <label>Input_Fields</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>MandatoryFields__c</fullName>
        <description>Comma separated list of fields that are visually flagged to indicate that they are verified - mostly mandatory</description>
        <inlineHelpText>Comma separated list of fields that are visually flagged to indicate that they are verified - mostly mandatory</inlineHelpText>
        <label>MandatoryFields</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Market__c</fullName>
        <description>Placeholder to hold the User Market.</description>
        <label>Market</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MaxAddressCount__c</fullName>
        <label>Max Address Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Output_Fields__c</fullName>
        <description>Contains the output fields for a particular Lightning component based on Market</description>
        <label>Output_Fields</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>PrePopulated_Values__c</fullName>
        <inlineHelpText>Data in this field should be entered in the following manner:
SYNTAX :  &lt;FIELD API NAME 1&gt; || &lt;VALUE 1&gt;, &lt;FIELD API NAME 2&gt; || &lt;VALUE 2&gt;
EXAMPLE: Color||Blue,Shape||Square</inlineHelpText>
        <label>PrePopulated Values</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Record_Type__c</fullName>
        <description>Contains Record Type for a particular record</description>
        <label>Record Type</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Table_Columns__c</fullName>
        <label>Table Columns</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Tile_Heading__c</fullName>
        <label>Tile_Heading</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>sObject__c</fullName>
        <description>Place holder for Name of the object</description>
        <label>sObject</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>show_records__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Boolean used to toggle between showing records and not showing records for specific Markets</description>
        <label>show records</label>
        <type>Checkbox</type>
    </fields>
    <label>Factory_Fields</label>
    <pluralLabel>Factory_Fields</pluralLabel>
</CustomObject>